--- a/src/components/SettingsArea/Locations/LocationCard/LocationCard.module.css
+++ b/src/components/SettingsArea/Locations/LocationCard/LocationCard.module.css
@@ -1,7 +1,159 @@
 .locationCard {
+    position: relative;
     width: 304px;
     height: 173px;
     padding: 20px;
     border: 1px solid rgba(175, 182, 198, 0.4);
     border-radius: 6px;
+    box-shadow: 2px 2px 15px rgba(0, 44, 175, 0.05);
+}
+
+.cardTitle span{
+    width: 70px;
+    height: 21px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 140%;
+    color: #1E212A;
+    margin-right: 8px;
+}
+
+.region:hover {
+    cursor: pointer;
+    color: #00A0EC;
+}
+
+.isDefault {
+    display: inline-block;
+    width: 72px;
+    height: 20px;
+    background: #00A0EC;
+    border-radius: 1000px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    line-height: 14px;
+}
+
+.isDefault span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 12px;
+}
+
+.cardBody {
+    margin-top: 24px;
+    position: relative;
+}
+
+.holidays, .leavePolicies {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    cursor: pointer;
+    cursor: pointer;
+}
+
+.bodyLink {
+    position: absolute;
+    color: #00A0EC;
+    font-weight: 400;
+    left: 107px;
+    cursor: pointer;
+}
+
+.bodyLink:hover {
+    text-decoration: underline;
+}
+
+.editCard {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    cursor: pointer;
+}
+
+.editCard:hover {
+    background-color: #EEF7FC;
+    border-radius: 6px;
+}
+
+.editMenu {
+    position: absolute;
+    top: 36px;
+    right: 10px;
+
+    width: 144px;
+    height: 112px;
+    padding: 16px 12px;
+    border-radius: 6px;
+    background-color: #fff;
+    z-index: 5;
+    border: 0.1px solid #EEF0F6;
+    box-shadow: 0px 8px 28px rgba(0, 0, 0, 0.05), 2px 2px 15px rgba(0, 44, 175, 0.05);
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 8px;
+}
+
+.editMenu > div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+}
+
+.editMenu > div > div {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    width: 100%;
+}
+
+.editMenu svg {
+    margin-right: 8px;
+}
+
+.users {
+    margin-top: 16px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.user img{
+    display: block;
+
+    height: 30px;
+    width: 30px;
+    margin-right: 4px;
+}
+
+.extraUsers {
+    width: 30px;
+    height: 30px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 16px;
+    color: #00A0EC;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
