--- a/src/components/SettingsArea/Modals/DeleteLocation.module.css
+++ b/src/components/SettingsArea/Modals/DeleteLocation.module.css
@@ -1,4 +1,50 @@
-.deleteLocation {
-    width: 460px;
-                   
+.title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    margin-bottom: 12px;
+}
+
+.mainInfo {
+    display: flex;
+    flex-direction: row;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    margin-bottom: 24px;
+    max-width: 380px;
+}
+
+.mainInfo svg {
+    align-item: start;
+    margin-right: 12px;
+    min-width: 16px;
+    min-height: 16px;
+}
+
+.deleteBtn {
+    background: linear-gradient(0deg, #F24445, #F24445), #FFFFFF;
+    border-radius: 6px;
+    height: 40px;
+    width: 119px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16px;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    cursor: pointer;
+}
+
+.btnWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
